# Autonomous_outreach-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docs/: 01_architecture.md  02_job_discovery.md  03_hiring_manager_discovery.md  04_personalization_engine.md  05_linkedin_automation.md  06_follow_up_system.md  07_safety_mechanisms.md  08_api_reference.md
src/: __init__.py
src/agents/: __init__.py
src/agents/follow_up/: __init__.py  agent.py
src/agents/hiring_manager/: __init__.py  agent.py  serper_search.py
src/agents/job_discovery/: __init__.py  agent.py
src/agents/job_discovery/scrapers/: __init__.py  base.py  greenhouse.py  jobright.py  lever.py  linkedin.py
src/agents/linkedin_executor/: __init__.py  agent.py  browser_actions.py  safety.py
src/agents/personalization/: __init__.py  agent.py  prompts.py
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  database.py  rate_limiter.py  scheduler.py
src/dashboard/: __init__.py  app.py
src/models/: __init__.py  db_models.py  schemas.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_rate_limiter.py  test_safety.py
